# qt6-cmake-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: macos.yml
sources/app/: CMakeLists.txt  main.cpp
sources/lib/: CMakeLists.txt
sources/lib/include/SomeLib/: SomeLibFile.h
sources/lib/src/: SomeLibFile.cpp
